--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,13 @@
 * {
     font-family: "Inter", sans-serif;
 }
+
+::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #a3a3a3;
+    border-radius: 16px;
+}
